// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`REST endpoint testing for /admin/country-food-name-map create item when logged in as an admin and the item is valid Returns the expected result 1`] = `
Object {
  "countryId": "1fc52423-eb83-4cd9-9fdd-b6f9cb323c37",
  "foodId": "c6f78568-fe23-47e4-8e65-55934199a39f",
  "name": "c6f78568-fe23-47e4-8e65-55934199a39f",
}
`;

exports[`REST endpoint testing for /admin/country-food-name-map delete item when logged in as an admin Returns the expected result 1`] = `
Object {
  "countryId": "1fc52423-eb83-4cd9-9fdd-b6f9cb323c37",
  "foodId": "c6f78568-fe23-47e4-8e65-55934199a39f",
  "name": "c6f78568-fe23-47e4-8e65-55934199a39f",
}
`;

exports[`REST endpoint testing for /admin/country-food-name-map edit item when logged in as an admin Returns the expected result 1`] = `
Object {
  "countryId": "d6e57673-eee8-444a-b7be-d9ab553052cf",
  "foodId": "c6f78568-fe23-47e4-8e65-55934199a39f",
  "name": "c6f78568-fe23-47e4-8e65-55934199a39f",
}
`;

exports[`REST endpoint testing for /admin/country-food-name-map get all when logged in as an admin Returns the expected result 1`] = `
Array [
  Object {
    "countryId": "d6e57673-eee8-444a-b7be-d9ab553052cf",
    "foodId": "c6f78568-fe23-47e4-8e65-55934199a39f",
    "id": "dcec5b2c-403b-43ae-8745-ef368987552c",
    "name": "Down Under Beetroot",
  },
]
`;

exports[`REST endpoint testing for /admin/country-food-name-map get single item when logged in as an admin Returns the expected result 1`] = `
Object {
  "countryId": "d6e57673-eee8-444a-b7be-d9ab553052cf",
  "foodId": "c6f78568-fe23-47e4-8e65-55934199a39f",
  "id": "dcec5b2c-403b-43ae-8745-ef368987552c",
  "name": "Down Under Beetroot",
}
`;
